# gcov-server

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml  init.sql
assets/: index.html
src/: db.rs  main.rs
templates/: base.html  reports.html
