[package]
name = "gcov_diff_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gcov-server"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tera = "1.20.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
